# tinysatpy

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  module.c
src/: TspCommon.cpp  TspCommon.h  TspModule.cpp  TspSolver.cpp  TspSolver.h
tinysatpy-front/: CMakeLists.txt  core.cpp  data.h
